// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`price-bluna error calls should throw an error if the Anchor bLUNA Hub contract returns 0 1`] = `
Object {
  "error": Object {
    "feedID": "BLUNA/USD",
    "message": "Invalid result for LUNA/bLUNA rate from bLUNA address error-terra-bluna-hub-contract-address",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`price-bluna error calls should throw an error if the LUNA/USD feed is down 1`] = `
Object {
  "error": Object {
    "feedID": "BLUNA/USD",
    "message": "Invalid result for Chainlink Terra feed error-luna-feed-address",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`price-bluna successful calls return success when fetching the USD/BLuna price 1`] = `
Object {
  "data": Object {
    "result": "26201174257498453414",
  },
  "jobRunID": "1",
  "result": "26201174257498453414",
  "statusCode": 200,
}
`;

exports[`price-bluna successful calls returns success when fetching the ETH/BLuna price 1`] = `
Object {
  "data": Object {
    "result": "1000007186099738228",
  },
  "jobRunID": "1",
  "result": "1000007186099738228",
  "statusCode": 200,
}
`;
